Update AI dashboard: 3 value stocks deployed via 18-agent system (PGR/ALL/KTB)

--- a/trading/dashboard-ai-enhanced.html
+++ b/trading/dashboard-ai-enhanced.html
@@ -72,7 +72,7 @@
     <div class="container">
         <header>
             <h1><span class="rooster">🐓</span> roostr AI-Enhanced Trading Dashboard <span class="badge-ai">🤖 18-AGENT SYSTEM</span></h1>
-            <p class="subtitle"><span class="live-indicator"></span>Live | Feb 12, 2026 11:39 EST | Ensemble Voting Active</p>
+            <p class="subtitle"><span class="live-indicator"></span>Live | Feb 12, 2026 12:10 EST | Ensemble Voting Active | 5 Positions Deployed</p>
         </header>
 
         <!-- BEFORE vs AFTER Comparison -->
@@ -181,6 +181,22 @@
                 <div class="agent-card">
                     <div class="agent-name">🧠 Sentiment Agent</div>
                     <div class="agent-vote">News sentiment + social signals</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Recent Deployment: 3 Value Stocks via 18-Agent System -->
+        <div class="card full-width">
+            <h2>🚨 LATEST: 3 Value Stocks Deployed via 18-Agent System (Feb 12, 2026)</h2>
+            
+            <div style="background: rgba(74, 222, 128, 0.1); border: 2px solid #4ade80; border-radius: 8px; padding: 20px; margin-bottom: 20px;">
+                <div style="font-size: 1.2em; font-weight: 700; color: #4ade80; margin-bottom: 10px;">
+                    ✅ $175,000 Deployed Across 3 Insurance/Consumer Stocks
+                </div>
+                <div style="color: #bbb;">
+                    <strong>PGR (Progressive)</strong> $75k @ $245.50 | Conv: 6.55/10 | Buffett 8.5/10<br>
+                    <strong>ALL (Allstate)</strong> $50k @ $180.25 | Conv: 6.21/10 | Buffett 8.5/10<br>
+                    <strong>KTB (Kontoor)</strong> $50k @ $85.40 | Conv: 6.11/10 | Deep value P/E 11.8
                 </div>
             </div>
         </div>
@@ -330,24 +346,24 @@
             <div class="card card-ai">
                 <h2>🎯 Current AI Integration Status</h2>
                 <div class="metric">
-                    <span class="metric-label">Agent System</span>
-                    <span class="metric-value neutral">🟡 In Development</span>
+                    <span class="metric-label">18-Agent System</span>
+                    <span class="metric-value positive">✅ DEPLOYED & LIVE</span>
                 </div>
                 <div class="metric">
-                    <span class="metric-label">Quant Agent</span>
-                    <span class="metric-value positive">✅ Built & Tested</span>
-                </div>
-                <div class="metric">
-                    <span class="metric-label">roostr Agents</span>
-                    <span class="metric-value neutral">🟡 Next (Social Arb first)</span>
+                    <span class="metric-label">Value Stock Screener</span>
+                    <span class="metric-value positive">✅ Active (3 stocks deployed today)</span>
                 </div>
                 <div class="metric">
                     <span class="metric-label">Ensemble Voting</span>
-                    <span class="metric-value neutral">🟡 Framework Ready</span>
+                    <span class="metric-value positive">✅ Live (conviction scoring working)</span>
                 </div>
                 <div class="metric">
-                    <span class="metric-label">Live Trading</span>
-                    <span class="metric-value neutral">🔴 Phase 2 (after validation)</span>
+                    <span class="metric-label">Social Arb Agent</span>
+                    <span class="metric-value neutral">🟡 Next (after value validation)</span>
+                </div>
+                <div class="metric">
+                    <span class="metric-label">Real Capital</span>
+                    <span class="metric-value neutral">🔴 Phase 2 (after 90-day track record)</span>
                 </div>
             </div>
         </div>
@@ -357,39 +373,41 @@
             <h2>💰 Capital Allocation (AI-Enhanced)</h2>
             <div class="grid">
                 <div class="signal green" style="margin: 10px;">
-                    <div class="signal-header">40% ($40,000) - Value Investing</div>
-                    <div class="signal-meta"><strong>NEW:</strong> Buffett + Graham + Munger agents scan daily</div>
+                    <div class="signal-header">40% ($400,000) - Value Investing</div>
+                    <div class="signal-meta"><strong>🤖 18-AGENT SYSTEM LIVE:</strong> Buffett + Graham + Munger agents approved 3 stocks TODAY</div>
                     <div class="signal-detail">
                         <strong>Conviction:</strong> 8.0/10 | <strong>Track Record:</strong> Consistent 15-20% annual<br>
-                        <strong>Deployed:</strong> $0 / $40,000 (0%)<br>
-                        <strong>Next Signals:</strong> Agents scanning Russell 2000 for hidden gems
+                        <strong>Deployed:</strong> $175,000 / $400,000 (43.8%) <span class="positive">← 18-Agent Approved!</span><br>
+                        <strong>Positions:</strong> PGR $75k (6.55/10), ALL $50k (6.21/10), KTB $50k (6.11/10)<br>
+                        <strong>P&L:</strong> <span class="neutral">Tracking live (stocks deployed today)</span>
                     </div>
                 </div>
-                <div class="signal green" style="margin: 10px;">
-                    <div class="signal-header">30% ($30,000) - Social Arbitrage</div>
-                    <div class="signal-meta"><strong>NEW:</strong> Social Arb Agent scans Reddit/Discord 24/7</div>
+                <div class="signal yellow" style="margin: 10px;">
+                    <div class="signal-header">30% ($300,000) - Social Arbitrage</div>
+                    <div class="signal-meta"><strong>🔨 IN DEVELOPMENT:</strong> Social Arb Agent scans Reddit/Discord 24/7</div>
                     <div class="signal-detail">
                         <strong>Conviction:</strong> 7.7/10 | <strong>Track Record:</strong> Camillo 77% annual<br>
-                        <strong>Deployed:</strong> $0 / $30,000 (0%)<br>
-                        <strong>Pipeline:</strong> Building Social Arb Agent this week
+                        <strong>Deployed:</strong> $0 / $300,000 (0%)<br>
+                        <strong>Status:</strong> Agent framework ready, deploying after value stock validation
                     </div>
                 </div>
                 <div class="signal yellow" style="margin: 10px;">
-                    <div class="signal-header">20% ($20,000) - Crypto Fundamentals</div>
-                    <div class="signal-meta"><strong>NEW:</strong> Cathie Wood + Catalyst agents track AI/DeFi</div>
+                    <div class="signal-header">20% ($200,000) - Crypto Fundamentals</div>
+                    <div class="signal-meta"><strong>DEPLOYED:</strong> Cathie Wood + Catalyst agents track AI/DeFi</div>
                     <div class="signal-detail">
                         <strong>Conviction:</strong> Emerging | <strong>Track Record:</strong> Dan $500→$500k<br>
-                        <strong>Deployed:</strong> $17,500 / $20,000 (88%)<br>
-                        <strong>Positions:</strong> TAO (-16.7%), SOL (-8.5%) — under AI monitoring
+                        <strong>Deployed:</strong> $17,500 / $200,000 (8.8%)<br>
+                        <strong>Positions:</strong> TAO $10k @ $176.05 (9.0/10), SOL $7.5k @ $86.51 (8.0/10)<br>
+                        <strong>P&L:</strong> <span class="negative">-$2,184 (-10.9%)</span> — under AI monitoring
                     </div>
                 </div>
                 <div class="signal yellow" style="margin: 10px;">
-                    <div class="signal-header">10% ($10,000) - Opportunistic</div>
-                    <div class="signal-meta"><strong>NEW:</strong> All agents flag outliers & unique setups</div>
+                    <div class="signal-header">10% ($100,000) - Opportunistic</div>
+                    <div class="signal-meta"><strong>RESERVED:</strong> All agents flag outliers & unique setups</div>
                     <div class="signal-detail">
                         <strong>Conviction:</strong> Variable<br>
-                        <strong>Deployed:</strong> $0 / $10,000 (0%)<br>
-                        <strong>Use Case:</strong> Agent-flagged anomalies, special situations
+                        <strong>Deployed:</strong> $0 / $100,000 (0%)<br>
+                        <strong>Use Case:</strong> Agent-flagged anomalies, special situations, Riz forex setups
                     </div>
                 </div>
             </div>
@@ -399,7 +417,7 @@
             <p><strong>roostr Capital</strong> · AI-Powered Hedge Fund (18-Agent System)</p>
             <p>🤖 Agents scan market → 🗳️ Ensemble vote → 📊 Quant backtest → 🐓 Joselo validates → 👤 G approves</p>
             <p>Phase 1: Build agents & validate | Phase 2: Live trading with full automation</p>
-            <p style="margin-top: 10px; font-size: 0.9em; color: #666;">Auto-updated by Joselo 🐓 | Last updated: Feb 11, 2026 14:12 EST</p>
+            <p style="margin-top: 10px; font-size: 0.9em; color: #666;">Auto-updated by Joselo 🐓 | Last updated: Feb 12, 2026 12:10 EST</p>
         </div>
     </div>
 </body>
