--- a/trading/dashboard.html
+++ b/trading/dashboard.html
@@ -40,7 +40,7 @@
     <div class="container">
         <header>
             <h1><span class="rooster">🐓</span> roostr Trading Dashboard</h1>
-            <p class="subtitle">Dashboard: Feb 17, 2026 14:45 EST | Prices: 14:45:00 (0s ago) ✅ Fresh | Source: CoinGecko</p>
+            <p class="subtitle">Dashboard: Feb 17, 2026 15:00 EST | Prices: 15:00:00 (0s ago) ✅ Fresh | Source: CoinGecko</p>
         </header>
         
         <!-- Allocation Overview -->
@@ -73,7 +73,7 @@
                     <div class="signal-meta">Conviction: Emerging | Track Record: Dan $500→$500k</div>
                     <div class="signal-detail">
                         <strong>Deployed:</strong> $17,500 / $20,000 (88%)<br>
-                        <strong>P&L:</strong> <span class="positive">$+928 (+4.6%)</span><br>
+                        <strong>P&L:</strong> <span class="positive">+$926 (+5.3%)</span><br>
                         <strong>Open Positions:</strong> 2
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="metric">
                     <span class="metric-label">Net P&L</span>
-                    <span class="metric-value positive">+$928 (+0.9%)</span>
+                    <span class="metric-value positive">+$926 (+5.3%)</span>
                 </div>
                 <div class="metric">
                     <span class="metric-label">Open Positions</span>
