Fix: Update dashboard to track ALL/PGR/KTB positions

--- a/trading/dashboard.html
+++ b/trading/dashboard.html
@@ -40,7 +40,7 @@
     <div class="container">
         <header>
             <h1><span class="rooster">🐓</span> roostr Trading Dashboard</h1>
-            <p class="subtitle">Dashboard: Feb 18, 2026 20:00 EST | Prices: 19:02:02 (57m ago) ⚠️ STALE | Source: CoinGecko</p>
+            <p class="subtitle">Dashboard: Feb 18, 2026 20:10 EST | Prices: 20:00:04 (9m ago) ✅ Fresh | Source: CoinGecko</p>
         </header>
         
         <!-- Allocation Overview -->
@@ -109,7 +109,7 @@
                 </div>
                 <div class="metric">
                     <span class="metric-label">Net P&L</span>
-                    <span class="metric-value neutral">$-82 (-0.5%)</span>
+                    <span class="metric-value neutral">+$0 (+0.0%)</span>
                 </div>
                 <div class="metric">
                     <span class="metric-label">Open Positions</span>
