--- a/trading/dashboard.html
+++ b/trading/dashboard.html
@@ -40,7 +40,7 @@
     <div class="container">
         <header>
             <h1><span class="rooster">🐓</span> roostr Trading Dashboard</h1>
-            <p class="subtitle">Dashboard: Feb 19, 2026 10:00 EST | Prices: 20:00:04 (13h ago) ⚠️ STALE | Source: CoinGecko</p>
+            <p class="subtitle">Dashboard: Feb 19, 2026 11:00 EST | Prices: 20:00:04 (14h ago) ⚠️ STALE | Source: CoinGecko</p>
         </header>
         
         <!-- Allocation Overview -->
@@ -109,7 +109,7 @@
                 </div>
                 <div class="metric">
                     <span class="metric-label">Net P&L</span>
-                    <span class="metric-value neutral">+$458 (+1.0%)</span>
+                    <span class="metric-value neutral">$-320 (-0.7%)</span>
                 </div>
                 <div class="metric">
                     <span class="metric-label">Open Positions</span>
