--- a/trading/dashboard.html
+++ b/trading/dashboard.html
@@ -40,7 +40,7 @@
     <div class="container">
         <header>
             <h1><span class="rooster">🐓</span> roostr Trading Dashboard</h1>
-            <p class="subtitle">Dashboard: Feb 20, 2026 10:00 EST | Prices: 20:00:04 (37h ago) ⚠️ STALE | Source: CoinGecko</p>
+            <p class="subtitle">Dashboard: Feb 20, 2026 11:00 EST | Prices: 20:00:04 (38h ago) ⚠️ STALE | Source: CoinGecko</p>
         </header>
         
         <!-- Allocation Overview -->
@@ -109,7 +109,7 @@
                 </div>
                 <div class="metric">
                     <span class="metric-label">Net P&L</span>
-                    <span class="metric-value neutral">$-106 (-0.2%)</span>
+                    <span class="metric-value neutral">+$23 (+0.1%)</span>
                 </div>
                 <div class="metric">
                     <span class="metric-label">Open Positions</span>
